# Digital-State

./: .digital-state.local.example.yaml  .gitignore  .smoke_audit_matrix.py  AGENTS-v3.2.0_CHANGELOG_ENTRY.md  AGENTS.md  ARCHITECTURAL_POST_RELEASE_REVIEW.md  CHANGELOG.md  CI_AUDIT_REPORT.md  CLI_LIFECYCLE_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIGITAL_STATE_V2_ROADMAP.md  EVIDENCE_REPRODUCTION.md  FINAL_INDEPENDENT_RELEASE_VERIFICATION.md  FINAL_RELEASE_GATE_REPORT.md  FINAL_REMEDIATION_REPORT.md  GOVERNANCE_CLOSURE_BASELINE_003.md  GOVERNANCE_DECISION_v1.16.0.md  HERMES_INTEGRATION_REMEDIATION_REPORT_v1.16.0.md  KANBAN.md  Makefile  PACKAGE.md  POST_RELEASE_AUDIT_v1.16.0.md  POST_RELEASE_VALIDATION_REPORT_v1.16.0.md  PRODUCTION_READINESS_v1.16.0.md  PUBLIC_DISTRIBUTION_REPORT.md  README.md  RELEASE_AUTOMATION_GUIDE.md  RELEASE_CERTIFICATION_REPORT.md  RELEASE_NOTES.md  RELEASE_READINESS_REPORT.md  RELEASE_READINESS_REPORT_v1.16.0.md  REMEDIATION_PLAN.md  REMEDIATION_VALIDATION_REPORT_v1.16.0.md  ROOT_CAUSE_ANALYSIS.md  RUNTIME_BASELINE_001.md  RUNTIME_BASELINE_002.md  RUNTIME_BASELINE_003.md  SECURITY.md  SECURITY_HARDENING_REPORT_v1.16.0.md  (+16 more)
.github/: CODEOWNERS  pull_request_template.md
.specify/: agents.json  feature.json  init-options.json  integration.json  plan.md  spec.md  state.json  tasks.md
archive/: SHA256SUMS
docs/: AGENT_DISPATCH_AND_VERIFICATION_RULES.md  AUDIT_LOG_ROTATION_SPECIFICATION.md  BENCHMARK_REPORT.md  EVENT_BROADCASTER_SPECIFICATION.md  EVIDENCE_GOVERNANCE_SPEC.md  FAILURE_AND_RECOVERY_POLICY.md  INSTALLATION_GUIDE.md  LIFECYCLE_STATE_MACHINE.md  PARALLEL_CONCURRENCY_MODEL.md  PLANNING_ENGINE_SPECIFICATION.md  PRIME_OPERATING_MODEL.md  REPOSITORY_CONVENTION_RULES.md  TASK_GRAPH_AND_KANBAN_SPECIFICATION.md  USER_INSTALLATION_GUIDE.md  WORKFLOW_SPECIFICATION.md
framework/: base_runtime.py
governance/: audit-matrix-policy.yaml  evidence_index.json
release-validation/: repository-audit.md
scripts/: generate_keys.py  install-simple.ps1  install.ps1  promote-to-review.sh  reproduce_in_sandbox.ps1  run_e2e_cli_steps.py  run_e2e_cli_steps_007.py  run_e2e_cli_steps_008.py  (+12 more)
(+613 files in other folders)
