[project]
name = "digital-state"
version = "1.6.0"
description = "Governance layer for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "PyYAML"
]

[project.scripts]
digitalstate = "digital_state.cli.cli:main"
digital-state = "digital_state.cli.cli:main"

[project.entry-points."hermes_agent.plugins"]
digital_state = "digital_state.hermes"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_state", "framework", "integrations"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".git,__pycache__,docs,build,dist,.specify,.agents,.hermes"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
